Added Mastodon links and removed twitter as main way of contacting me.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,11 @@
                 </a>
             </div>
             <div class="social__container--extending">
+                <a href="https://mastodon.gamedev.place/@KelvinvanHoorn" target="_blank">
+                    <i class="fab fa-mastodon" style="vertical-align:text-bottom;"></i><span>&nbsp@KelvinvanHoorn</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
                 <a href="https://twitter.com/KelvinvanHoorn" target="_blank">
                     <i class="fab fa-twitter" style="vertical-align:text-bottom;"></i><span>&nbsp@KelvinvanHoorn</span>
                 </a>
