Improved rounding on images and previews

--- a/_includes/core.html
+++ b/_includes/core.html
@@ -195,7 +195,7 @@
 
     var newDiv = document.createElement("div");
     newDiv.innerHTML = altText;
-    newDiv.classList.add('caption__text', 'round');
+    newDiv.classList.add('caption__text');
     this.after(newDiv);
     });
 </script>    
