--- a/_includes/preview-list-simple.html
+++ b/_includes/preview-list-simple.html
@@ -18,9 +18,11 @@
     ];
     
     var pageLimit = Math.min(previewIndex.length, postsPerPage);
-    for(i = 0; i < pageLimit; i++){
+    for(i = 0; i < pageLimit; i++)
+    {
         addPostPreview(i);
     }
+    
     if(pageLimit == previewIndex.length)
     {
         loadButton.style.display = "none";
@@ -29,7 +31,8 @@
     }
 
     var previousLimit = pageLimit;
-    function increasePageLimit() {
+    function increasePageLimit() 
+    {
         pageLimit += postsPerPage;
         pageLimit = Math.min(pageLimit, previewIndex.length);
 
@@ -47,7 +50,8 @@
         }
     }
 
-    function addPostPreview(i){
+    function addPostPreview(i)
+    {
         var previewContainer = document.createElement('div');
         previewContainer.classList.add('container', 'video__container', 'preview', 'round');
         previewGrid.appendChild(previewContainer);
@@ -64,7 +68,7 @@
             video.autoplay = true;
             video.muted = true;
             video.loop = true;
-            // video.classList.add('round');
+            video.classList.add('innerRound');
 
             videoLink.appendChild(video);
             previewContainer.appendChild(videoLink);
@@ -78,7 +82,7 @@
         
 
         var captionContainer = document.createElement('div');
-        captionContainer.classList.add('caption__text--overlay', 'round');
+        captionContainer.classList.add('caption__text--overlay');
         // captionContainer.classList.add('caption__text', 'round', 'caption__text--hover');
 
         var captionLink = document.createElement('a');
