--- a/_includes/preview-list.html
+++ b/_includes/preview-list.html
@@ -65,7 +65,7 @@
             video.autoplay = true;
             video.muted = true;
             video.loop = true;
-            // video.classList.add('round');
+            video.classList.add('innerRound');
 
             videoLink.appendChild(video);
             previewContainer.appendChild(videoLink);
@@ -79,7 +79,7 @@
         
 
         var captionContainer = document.createElement('div');
-        captionContainer.classList.add('caption__text--overlay', 'caption__text--fill', 'round');
+        captionContainer.classList.add('caption__text--overlay', 'caption__text--fill');
 
         var captionLink = document.createElement('a');
         captionLink.href = post.url;
