--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -181,7 +181,7 @@ li ol > li:before {
 }
 
 // If only css had inheritance :'(
-.innerRound, .image__modal, .caption__text, .caption__text--hover, .caption__text--overlay{
+.innerRound, .image__modal, .caption__text, .caption__text--hover, .caption__text--overlay, .video__youtube, .video_local{
     border-radius: 0.2rem;
 }
 
