Added video_local to preview lists

--- a/_includes/preview-list.html
+++ b/_includes/preview-list.html
@@ -65,7 +65,7 @@
             video.autoplay = true;
             video.muted = true;
             video.loop = true;
-            video.classList.add('innerRound');
+            video.classList.add('video_local');
 
             videoLink.appendChild(video);
             previewContainer.appendChild(videoLink);
