--- a/_includes/preview-list-simple.html
+++ b/_includes/preview-list-simple.html
@@ -68,7 +68,7 @@
             video.autoplay = true;
             video.muted = true;
             video.loop = true;
-            video.classList.add('innerRound');
+            video.classList.add('video_local');
 
             videoLink.appendChild(video);
             previewContainer.appendChild(videoLink);
