Add mastadon verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,4 +34,7 @@
 
 	<!-- SEO Tag -->
 	{% seo %}
+
+	<!-- Mastadon verification -->
+	<link rel="me" href="https://mastodon.gamedev.place/@KelvinvanHoorn">
 </head>
