--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -1,6 +1,10 @@
-:root,
+:root {
+    //--bg-header : (0,0,0,0);
+    --bg-header : hsl(80, 100%, 96%);
+}
+
 :root.light {
-    --bg-header             : hsl(0, 0%, 100%);
+    //--bg-header             : hsl(0, 0%, 100%);
     --bg-main               : hsl(0, 0%, 92%);
     --bg-variation          : hsl(0, 0%, 95%);
     --bg-contrast           : hsl(0, 0%, 20%);
@@ -23,7 +27,7 @@
 }
 
 :root.dark {
-    --bg-header             : hsl(0, 0%, 20%);
+    //--bg-header             : hsl(0, 0%, 20%);
     --bg-main               : hsl(0, 0%, 30%);
     --bg-variation          : hsl(0, 0%, 25%);
     --bg-contrast           : hsl(0, 0%, 80%);
@@ -46,5 +50,5 @@
 }
 
 // $phone-width: 600px;
-$mediumdevice-width: 768px;
+$mediumdevice-width: 1080px;//768px;
 
