--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -177,11 +177,11 @@ li ol > li:before {
 }
 
 .round{
-    border-radius: 0.3rem;
+    border-radius: var(--round-radius);
 }
 
 // If only css had inheritance :'(
-.innerRound, .image__modal, .caption__text, .caption__text--hover, .caption__text--overlay, .video__youtube, .video_local{
+.innerRound, .image__modal, .caption__text, .caption__text--hover, .caption__text--overlay{
     border-radius: 0.2rem;
 }
 
