Shadow insets on images and videos

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -1,6 +1,8 @@
 :root {
     //--bg-header : (0,0,0,0);
     --bg-header : hsl(80, 100%, 96%);
+    --container-shadow : hsl(0, 0%, 10%);
+
     --round-radius : 0.3rem;
 }
 
