--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -1,14 +1,29 @@
 .image__container{
     position: relative;
 
-    display:grid;
-    gap: 0.3rem;
+    // display:grid;
+    // gap: 0.3rem;
     
     width: fit-content;
     height: fit-content;
 
-    background-color: var(--accent3);
-    border: 0.3rem solid var(--accent3);
+    // background-color: var(--accent3);
+    // border: 0.3rem solid var(--accent3);
+    pointer-events: none;
+}
+
+// Draw box shadow on images in container
+.image__container::after
+{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 0 12px 0 var(--container-shadow);
+  border-radius: var(--round-radius);
+  overflow: hidden;
 }
 
 .image__container img{
@@ -17,21 +32,13 @@
     object-fit: contain;
 
     width:100%;
+    pointer-events: auto;
 }
 
 .portrait{
     object-fit: contain;
     width: 100%;
     max-height: 100%;
-
-    mask: 
-        linear-gradient(to top,  transparent 0%, #fff 5% 95%, transparent 100%),
-        linear-gradient(to left, transparent 0%, #fff 5% 95%, transparent 100%);
-        mask-position: center;
-        mask-repeat: no-repeat;
-        mask-composite: intersect;
-
-        //mask-image: linear-gradient(black 90%, transparent);
 }
 
 @media only screen and (max-width: $mediumdevice-width){
