--- a/_sass/libs/_videos.scss
+++ b/_sass/libs/_videos.scss
@@ -1,33 +1,48 @@
 .video__container{
     position: relative;
 
-    display: grid;
-    gap: 0.3rem;
+    // display: grid;
+    // gap: 0.3rem;
 
     width: 100%;
     // height:100%;
 
-    background-color: var(--accent2);
-    border: 0.3rem solid var(--accent2);
+    // background-color: var(--accent2);
+    // border: 0.3rem solid var(--accent2);
+    pointer-events: none;
 }
 
-.video__container.gif{
-    background-color: var(--accent2);
-    border: 0.3rem solid var(--accent2);
+.video__container::after
+{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 0 12px 0 var(--container-shadow);
+  border-radius: var(--round-radius);
+  overflow: hidden;
 }
 
-.video__container.preview{
-    background-color: var(--accent1);
-    border: 0.3rem solid var(--accent1);
-}
+// .video__container:hover{
+//     box-shadow: inset 0 0 6px 6px var(--bg-header);
+// }
+
+// .video__container.gif{
+//     background-color: var(--accent2);
+//     border: 0.3rem solid var(--accent2);
+// }
+
+// .video__container.preview{
+//     background-color: var(--accent1);
+//     border: 0.3rem solid var(--accent1);
+// }
 
 .video__container.youtube{
     position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	height: 0;
-
-    background-color: var(--accent2);
-    border: 0.3rem solid var(--accent2);
 }
 
 .video__container video{
@@ -35,18 +50,24 @@
     display: flex;
     width: 100%;
     height: 100%;
+
     border-radius: var(--round-radius);
+    pointer-events: auto;
 }
 
 .video__container iframe{
     position: absolute;
+    display: block;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+
+    border-radius: var(--round-radius);
+    pointer-events: auto;
 }
 
-.video__youtube{
-    width:560;
-    height:315;
-}
+// .youtube iframe{
+//     width:560px;
+//     height:315px;
+// }
