Palatino serif headers

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -13,10 +13,16 @@ body {
 
 h1 {
     line-height: 1.2em;
+    font-family: Palatino, serif;
 }
 
 h2 {
     line-height: 1.2em;
+    font-family: Palatino, serif;
+}
+
+h3 {
+    font-family: Palatino, serif;
 }
 
 .main-content{
