Image hover effect for links and modals

--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -13,8 +13,7 @@
 }
 
 // Draw box shadow on images in container
-.image__container::after
-{
+.image__container::after{
   content: '';
   position: absolute;
   top: 0;
@@ -24,6 +23,14 @@
   box-shadow: inset 0 0 12px 0 var(--container-shadow);
   border-radius: var(--round-radius);
   overflow: hidden;
+}
+
+.image__container:has(img.image__modal):hover::after{
+    box-shadow: 0 0 6px 0 var(--container-shadow);
+}
+
+a .image__container:hover::after{
+    box-shadow: 0 0 6px 0 var(--container-shadow);
 }
 
 .image__container img{
