--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,51 +1,2 @@
 <!-- Footer -->
-<footer id="footer">
-
-    <div class="main-grid">
-        <div></div>
-        <div style="margin:0 1rem;">
-            <div class="social__container--compact">
-                <a href="mailto:kelvinvanhoorn@outlook.com">
-                    <i class="fas fa-envelope" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="https://mastodon.gamedev.place/@KelvinvanHoorn" target="_blank">
-                    <i class="fab fa-mastodon" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="https://twitter.com/KelvinvanHoorn" target="_blank">
-                    <i class="fab fa-twitter" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="https://www.reddit.com/user/Radagasd" target="_blank">
-                    <i class="fab fa-reddit-alien" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="https://www.github.com/Radagasd" target="_blank">
-                    <i class="fab fa-github" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank">
-                    <i class="fab fa-linkedin-in" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="https://radagasd.itch.io/" target="_blank">
-                    <i class="fab fa-itch-io" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-            <div class="social__container--compact">
-                <a href="/feed.xml" target="_blank">
-                    <i class="fas fa-rss" style="vertical-align:text-bottom;"></i>
-                </a>
-            </div>
-        </div>
-        <div></div>
-    </div>
-    
-</footer>
+<footer></footer>
