--- a/_sass/libs/_grids.scss
+++ b/_sass/libs/_grids.scss
@@ -55,10 +55,10 @@
     grid-template-columns: 1fr 2fr;
 }
 
-@media only screen and (max-width: $mediumdevice-width) {
-    .grid__maxcolumns--2{
-        grid-template-columns: 1fr;
-    }
+@media only screen and (max-width: $mediumdevice-width-2-1) {
+    // .grid__maxcolumns--2{
+    //     grid-template-columns: 1fr;
+    // }
     .grid__columns-2-1{
         grid-template-columns: 1fr;
     }
