--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -48,7 +48,7 @@ a .image__container:hover::after{
     max-height: 100%;
 }
 
-@media only screen and (max-width: $mediumdevice-width){
+@media only screen and (max-width: $mediumdevice-width-2-1){
     .portrait{
         // $mediumdevice-width / 3
         max-width: 256px;
