--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,23 @@
     <!-- Header -->
     <header id="header">
 
-        <div class="navbar">
+        <div class="hamburger-menu">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+            <span></span>
+            </label>
+
+            <ul class="menu__box">
+            <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
+            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
+            {% for page in navlist %}
+                <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            <li><button class="theme-btn" onclick="mySwitchTheme()"><i class="fas fa-adjust"></i></button></li>
+            </ul>
+        </div>
+
+        <!-- <div class="navbar">
             
             <a href="{{ site.baseurl }}/" class="logo">{{ site.title }}</a>
 
@@ -17,5 +33,5 @@
                 {% endfor %}
                 <button class="theme-btn" onclick="mySwitchTheme()"><i class="fas fa-adjust"></i></button>
             </div>
-        </div>
+        </div> -->
     </header>
