Set font to Palatino

--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -61,7 +61,7 @@
     display: block;
     padding: 12px 24px;
     color: var(--accent1);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Palatino', serif;
     font-size: 20px;
     font-weight: 600;
     text-decoration: none;
