--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -1,53 +1,68 @@
+// #hamburger-menu {
+//     display: none;
+// }
+
 #menu__toggle {
     opacity: 0;
+    display: none;
 }
-#menu__toggle:checked + .menu__btn > span {
-    transform: rotate(45deg);
-}
-#menu__toggle:checked + .menu__btn > span::before {
-    top: 0;
-    transform: rotate(0deg);
-}
-#menu__toggle:checked + .menu__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
+
+#menu__toggle:checked + .menu__btn > .menu__box {
     left: 0 !important;
 }
+
 .menu__btn {
     position: fixed;
     top: 20px;
-    left: 20px;
+    left: calc(1rem + 8px); // Add box-shadow
     width: 26px;
     height: 26px;
     
-    cursor: pointer;
-    z-index: 2;
+    z-index: 10;
     // Button background
     box-shadow: 0 0 0 8px var(--bg-contrast);
     border-radius: 4px;
     background-color: var(--bg-contrast);
 }
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
+
+.menu__icon{
+    cursor: pointer;
+}
+
+// Triple bars
+.menu__icon > span,
+.menu__icon > span::before,
+.menu__icon > span::after {
     display: block;
     position: absolute;
     width: 100%;
     height: 4px;
     top: 11px;
     background-color: var(--accent1);
+    z-index: 11;
     transition-duration: .25s;
 }
-.menu__btn > span::before {
+.menu__icon > span::before {
     content: '';
     top: -11px;
 }
-.menu__btn > span::after {
+.menu__icon > span::after {
     content: '';
     top: 11px;
 }
+// Rotate  bars to cross
+#menu__toggle:checked + .menu__btn > .menu__icon > span {
+    transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > .menu__icon > span::before {
+    top: 0;
+    transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > .menu__icon > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
 .menu__box {
     display: block;
     position: fixed;
@@ -58,11 +73,11 @@
     margin: 0;
     padding: 80px 0;
     list-style: none;
-    background-color: var(--bg-contrast);//#ECEFF1;
+    background-color: var(--bg-contrast);
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-    z-index: 1;
     transition-duration: .25s;
 }
+
 .menu__item {
     display: block;
     padding: 12px 24px;
@@ -76,3 +91,31 @@
 .menu__item:hover {
     background-color: var(--bg-main);
 }
+
+.menu__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .25s, visibility .25s, height .25s;
+    overflow: hidden;
+    background: black;
+    z-index: -1; 
+}
+
+#menu__toggle:checked + .menu__btn > .menu__overlay {
+    visibility: visible;
+    opacity: 0.4;
+}
+
+// @media screen and (max-width: 750px) {
+//     #main-menu {
+//         display: none;
+//     }
+//     #hamburger-menu {
+//         display: inline;
+//     }
+// }
