Theme switch tweak

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,8 @@
                     {% for page in navlist %}
                     <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
                     {% endfor %}
-                    <li><button class="theme-btn" onclick="mySwitchTheme()"><i class="fas fa-adjust"></i></button></li>
+                    <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fas fa-adjust"></i></button></li>
                 </ul>
-
                 <div class="menu__overlay"></div>
             </label>   
         </div>
