--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -229,8 +229,9 @@ li ol > li:before {
 .theme-btn{
     border: 0;
     background: transparent;
-    color: var(--text-contrast);
+    color: var(--accent1);
     font-size: xx-large;
     vertical-align: middle;
+    rotate: 90deg;
     cursor: pointer;
 }
