--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -80,7 +80,7 @@
 
 .menu__item {
     display: block;
-    padding: 12px 24px;
+    padding: 0.5rem 1.5rem;
     color: var(--accent1);
     font-family: 'Palatino', serif;
     font-size: 20px;
