--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -55,5 +55,6 @@ h3 {
 @media screen and (max-width: $mediumdevice-width){
     .main-grid{
         grid-template-columns: 0fr 1fr 0fr;
+        padding-top: 5rem;
     }
 }
