--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -55,10 +55,10 @@ hr{
     background-color: var(--bg-header);
 
     border-bottom: .2em solid var(--accent1);
-    border-top: .2em solid var(--accent1);
+    // border-top: .2em solid var(--accent1);
 
     margin-bottom: 2em;
-    margin-top: 1em;
+    // margin-top: 1em;
 }
 
 // Decimal list
