--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -1,6 +1,7 @@
-// #hamburger-menu {
-//     display: none;
-// }
+#hamburger-menu {
+    // display: none;
+    text-align: left;
+}
 
 #menu__toggle {
     opacity: 0;
