--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,23 +4,35 @@
     <!-- Header -->
     <header id="header">
 
-        <div id="hamburger-menu">
-            <input id="menu__toggle" type="checkbox" />
-            <label class="menu__btn" for="menu__toggle">
-                <div class="menu__icon">
-                    <span></span>
-                </div>
+        <div class="header-grid">
+            <div></div>
 
-                <ul class="menu__box">
-                    <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
-                    {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
-                    {% for page in navlist %}
-                    <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-                    {% endfor %}
-                    <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fas fa-adjust"></i></button></li>
-                </ul>
-                <div class="menu__overlay"></div>
-            </label>   
+            <div class="title-box">
+                <div id="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                        <div class="menu__icon">
+                            <span></span>
+                        </div>
+
+                        <ul class="menu__box">
+                            <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
+                            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
+                            {% for page in navlist %}
+                            <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                            {% endfor %}
+                            <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fas fa-adjust"></i></button></li>
+                        </ul>
+                        <div class="menu__overlay"></div>
+                    </label>   
+                </div>
+                <div>
+                <h1>{{page.title}}</h1>
+                </div>
+                <div></div>
+            </div>
+
+            <div></div>
         </div>
 
         <!-- <div class="navbar">
