--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -49,6 +49,23 @@
         align-items: center;
         grid-template-columns: 1fr $mediumdevice-width 1fr;
     }
+
+    .title-box{
+        // display: grid;
+        align-items: center;
+        // grid-template-columns: 0fr $mediumdevice-width 0fr;
+        
+        text-align: center;
+        width: 100%;
+    
+        background-color: var(--bg-header);
+    
+        border-bottom: .2em solid var(--accent1);
+        // border-top: .2em solid var(--accent1);
+    
+        margin-bottom: 2em;
+        // margin-top: 1em;
+    }
     
     @media screen and (max-width: $mediumdevice-width){
         .header-grid{
@@ -60,5 +77,9 @@
             width: 100%;
             z-index: 5;
         }
+
+        // .title-box{
+        //     grid-template-columns: auto auto 0rem;
+        // }
     }
 }
