--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     <header id="header">
 
         <div class="header-grid">
+            <div></div>
 
             <div class="title-box">
                 <div id="hamburger-menu">
@@ -25,9 +26,8 @@
                         <div class="menu__overlay"></div>
                     </label>   
                 </div>
-                <div>
+
                 <h1>{{page.title}}</h1>
-                </div>
             </div>
 
             <div></div>
