Burger button and title improvement

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -53,6 +53,9 @@
     .title-box{
         display: block;
         align-items: center;
+
+        padding-left: 3.5rem;
+        padding-right: 3.5rem;
         
         text-align: center;
         width: 100%;
