--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -15,20 +15,22 @@
 .menu__btn {
     display: block;
     position: fixed;
-    top: 20px;
-    left: calc(1rem + 8px); // Add box-shadow
-    width: 26px;
-    height: 26px;
-    
-    z-index: 10;
-    // Button background
-    box-shadow: 0 0 0 8px var(--bg-contrast);
+    top: 1rem;
+    left: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    cursor: pointer;
     border-radius: 4px;
     background-color: var(--bg-contrast);
+    // box-shadow: 0 0 6px 0 var(--container-shadow);
+    
+    z-index: 10;    
 }
 
 .menu__icon{
-    cursor: pointer;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 // Triple bars
@@ -37,20 +39,26 @@
 .menu__icon > span::after {
     display: block;
     position: absolute;
-    width: 100%;
-    height: 4px;
-    top: 11px;
+    width: 2rem;
+    height: 0.25rem;
+    top: calc(1.25rem - 0.25rem * 0.5);
+    border-radius: 0.125rem;
     background-color: var(--accent1);
     z-index: 11;
     transition-duration: .25s;
 }
+
+.menu__icon > span{
+    left: 0.25rem;
+}
+
 .menu__icon > span::before {
     content: '';
-    top: -11px;
+    top: -0.66rem;
 }
 .menu__icon > span::after {
     content: '';
-    top: 11px;
+    top: .66rem;
 }
 // Rotate  bars to cross
 #menu__toggle:checked + .menu__btn > .menu__icon > span {
@@ -114,18 +122,6 @@
 }
 
 @media screen and (max-width: $mediumdevice-width) {
-    // #main-menu {
-    //     display: none;
-    // }
 
-
-
-    // #hamburger-menu {
-    //     display: inline;
-    // }
-
-    .menu__btn {
-        position: relative;
-    }
 }
 
