Introduced sticky header width

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -67,7 +67,7 @@
         margin-bottom: 2em;
     }
     
-    @media screen and (max-width: $mediumdevice-width){
+    @media screen and (max-width: $sticky-header-width){
         .header-grid{
             grid-template-columns: 0fr 1fr 0fr;
             position: fixed;
