--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -52,7 +52,7 @@ h3 {
     grid-template-columns: 1fr $mediumdevice-width 1fr;
 }
 
-@media screen and (max-width: $mediumdevice-width){
+@media screen and (max-width: $sticky-header-width){
     .main-grid{
         grid-template-columns: 0fr 1fr 0fr;
         padding-top: 5rem;
