Note and caption coloring

--- a/_sass/libs/_containers.scss
+++ b/_sass/libs/_containers.scss
@@ -23,7 +23,7 @@
 
 .caption__text{
     position: relative;
-    background: var(--bg-caption);
+    background: var(--bg-note);
 
     color: var(--text-white);
     width: 100%;
