--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -1,9 +1,11 @@
 :root {
     //--bg-header : (0,0,0,0);
-    --bg-header : #ebece7;
-    --container-shadow : hsl(0, 0%, 10%);
+    --bg-header             : #ebece7;
+    --container-shadow      : hsl(0, 0%, 10%);
 
-    --round-radius : 0.3rem;
+    --round-radius          : 0.3rem;
+
+    --bg-note               : #2d2d2d;
 
     --accent1               : #a3c86b;
     --accent2               : #ee5622; // likely deprecate
@@ -13,12 +15,10 @@
 }
 
 :root.light {
-    //--bg-header             : hsl(0, 0%, 100%);
-    --bg-header : #ebece7;
+    --bg-header             : #ebece7;
     --bg-main               : #ebece7;
     --bg-variation          : hsl(0, 0%, 95%);
     --bg-contrast           : #4d5d6a;
-    --bg-caption            : hsl(0, 0%, 20%);
 
     --shadow-main           : rgba(0, 0, 0, 5%);
     --shadow-sides          : rgba(0, 0, 0, 10%);
@@ -28,21 +28,14 @@
     --text-white            : hsl(0, 0%, 100%);
     --text-mark             : hsl(123, 50%, 80%);
     --text-mark-contrast    : hsl(123, 50%, 20%);
-
-    // --accent1               : #a3c86b;
-    // --accent2               : #ee5622;
-    // --accent3               : #eca72c;
-    // --accent4               : #228ebf;
-    // --accent5               : #914d76;
 }
 
 :root.dark {
-    //--bg-header             : hsl(0, 0%, 20%);
     --bg-header             : #4d5d6a;
     --bg-main               : #4d5d6a;
     --bg-variation          : hsl(0, 0%, 25%);
     --bg-contrast           : #ebece7;
-    --bg-caption            : hsl(0, 0%, 20%);
+    
 
     --shadow-main           : rgba(0, 0, 0, 5%);
     --shadow-sides          : rgba(0, 0, 0, 10%);
@@ -52,12 +45,6 @@
     --text-white            : hsl(0, 0%, 100%);
     --text-mark             : hsl(123, 50%, 20%);
     --text-mark-contrast    : hsl(123, 50%, 80%);
-
-    // --accent1               : #4abf50;
-    // --accent2               : #ee5622;
-    // --accent3               : #eca72c;
-    // --accent4               : #2d7dd2;
-    // --accent5               : hsl(324, 31%, 50%);
 }
 
 // $phone-width: 600px;
