Code accent switched to orange

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -8,10 +8,10 @@
     --bg-note               : #2d2d2d;
 
     --accent1               : #a3c86b;
-    --accent2               : #ee5622; // likely deprecate
+    --accent2               : #f76f71; // likely deprecate
     --accent3               : #deb275; // likely deprecate
     --accent4               : #228ebf;
-    --accent5               : #f76f71;
+    --accent5               : #ee5622;
 }
 
 :root.light {
