--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -193,8 +193,8 @@ li ol > li:before {
     font-size: large;
     font-weight: bold;
     border: 0.2em solid var(--accent4);
-    background-color: var(--bg-header);
-    color: var(--accent4);
+    background-color: var(--accent4);
+    color: var(--text-white);
     cursor: pointer;
     padding: 0.5em;
     border-radius: var(--round-radius);
