--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@
     <div class="main-grid">
       
 
-      <div class="main-whitespace shadow-left"></div>
+      <div></div>
       <div class="main-content">
         
         {{ content }}
@@ -47,7 +47,7 @@
         {% include comments.html %}
         
       </div>
-      <div class="main-whitespace shadow-right"></div>
+      <div></div>
       
 
     </div>
