--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: var(--bg-header);
+    background-color: var(--bg-main);
     margin: 0;
     // font-size: large;
     line-height: 1.5em;
@@ -27,24 +27,7 @@ h3 {
 
 .main-content{
     padding: 1rem;
-    //background-color: var(--bg-main);
-    //box-shadow: 0 0 0.5rem var(--shadow-main) inset;
 }
-
-.main-whitespace{
-    //background-color: var(--bg-variation);
-    height: 100%;
-}
-
-.main-whitespace.shadow-left{
-    //box-shadow: -0.5rem 0.5rem 0.5rem var(--shadow-sides) inset, 0rem -0.5rem 0.5rem var(--shadow-sides) inset;
-}
-
-.main-whitespace.shadow-right{
-    //box-shadow: 0.5rem 0.5rem 0.5rem var(--shadow-sides) inset, 0rem -0.5rem 0.5rem var(--shadow-sides) inset;
-}
-
-
 
 .main-grid{
     display: grid;
