--- a/_sass/libs/_menu.scss
+++ b/_sass/libs/_menu.scss
@@ -20,7 +20,7 @@
     width: 2.5rem;
     height: 2.5rem;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     background-color: var(--bg-contrast);
     // box-shadow: 0 0 6px 0 var(--container-shadow);
     
