--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,11 +9,11 @@
 
     <div class="main-grid">
 
-      <div class="main-whitespace shadow-left"></div>
+      <div></div>
       <div class="main-content">
         {{ content }}
       </div>
-      <div class="main-whitespace shadow-right"></div>
+      <div></div>
 
     </div>
 
