--- a/_sass/libs/_collapsible.scss
+++ b/_sass/libs/_collapsible.scss
@@ -1,5 +1,5 @@
 .collapsible {
-    background-color: var(--accent5);
+    background-color: var(--accent3);
     color: var(--text-white);
     cursor: pointer;
     padding: 1rem;
@@ -34,9 +34,9 @@
     max-height: 0;
     overflow: hidden;
     // transition: max-height 0.2s ease-out;
-    background-color: var(--bg-header);
+    background-color: var(--bg-main);
 
-    border: 0rem solid var(--accent5);
+    border: 0rem solid var(--accent3);
     margin-bottom: 1rem;
     visibility: hidden;
 }
@@ -48,6 +48,6 @@
 }
 
 .collapsible__content.code{
-    border-color: var(--accent5);
-    background-color: var(--accent5);
+    border-color: var(--accent3);
+    background-color: var(--accent3);
 }
