--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -17,7 +17,7 @@ pre {
 
 mark{
     background-color: var(--text-mark);
-    border-radius: 0.3em;
+    border-radius: var(--round-radius);
     padding: 0 0.15em;
     color: inherit;
 }
@@ -78,7 +78,7 @@ li ol > li:before {
     width: fit-content;
     color: var(--text-white);
 
-    border-radius: 0.3rem;
+    border-radius: var(--round-radius);
     border: 0.3rem solid var(--bg-note);
     background-color: var(--bg-note);
     transition: ease-in-out 0.3s;
@@ -96,11 +96,11 @@ li ol > li:before {
 .social__container--compact{
     display: inline-flex;
     width: fit-content;
-    color: var(--text-contrast);
+    color: var(--text-white);
 
-    border-radius: 0.3rem;
-    border: 0.3rem solid var(--text);
-    background-color: var(--text);
+    border-radius: var(--round-radius);
+    border: 0.3rem solid var(--bg-note);
+    background-color: var(--bg-note);
     transition: ease-in-out 0.3s;
 
     margin: 0.5rem 0;
@@ -114,11 +114,11 @@ li ol > li:before {
 .social__container--extending{
     display: inline-flex;
     width: fit-content;
-    color: var(--text-contrast);
+    color: var(--text-white);
 
-    border-radius: 0.3rem;
-    border: 0.3rem solid var(--text);
-    background-color: var(--text);
+    border-radius: var(--round-radius);
+    border: 0.3rem solid var(--bg-note);
+    background-color: var(--bg-note);
     transition: ease-in-out 0.3s;
 
     margin: 0.5rem 0;
@@ -147,7 +147,7 @@ li ol > li:before {
 
 .post__navigation{
     padding: 0.5rem 0.5rem;
-    background-color: var(--bg-header);
+    background-color: var(--bg-main);
     border-top: 0.2rem solid var(--accent1);
     border-bottom: 0.2rem solid var(--accent1);
     position: relative;
@@ -164,7 +164,7 @@ li ol > li:before {
 
 // If only css had inheritance :'(
 .innerRound, .image__modal, .caption__text, .caption__text--hover, .caption__text--overlay{
-    border-radius: 0.2rem;
+    border-radius: var(--round-radius-inner);
 }
 
 #toTopBtn {
@@ -192,8 +192,8 @@ li ol > li:before {
     position: relative;
     font-size: large;
     font-weight: bold;
-    border: 0.2em solid var(--accent4);
-    background-color: var(--accent4);
+    border: 0.2em solid var(--accent2);
+    background-color: var(--accent2);
     color: var(--text-white);
     cursor: pointer;
     padding: 0.5em;
