Color container lists

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -11,7 +11,7 @@
     --accent2               : #228ebf;
     --accent3               : #ee5622;
 
-    // --accent4               : #deb275;
+    --accent4               : #deb275;
     // --accent5               : #f76f71;
 }
 
