Clean and comment header css

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,48 +1,46 @@
 #header{
-    background: var(--bg-main);
-    font-family: Palatino, serif;
+    // TODO: remake navbar for widescreen
+    // .navbar{
+    //     position: relative;
+    //     padding: 0.5rem;
+    //     width: 100%;
 
-    .navbar{
-        position: relative;
-        padding: 0.5rem;
-        width: 100%;
+    //     display: grid;
+    //     grid-template-columns: auto 1fr auto;
 
-        display: grid;
-        grid-template-columns: auto 1fr auto;
+    //     align-items: center;
+    // }
 
-        align-items: center;
-    }
-
-    .navbar a{
-        color: var(--text);
+    // .navbar a{
+    //     color: var(--text);
         
-        text-decoration: none;
-        text-align: center;
-        font-size: large;
-        font-weight: bold;
-        display: inline-block;
+    //     text-decoration: none;
+    //     text-align: center;
+    //     font-size: large;
+    //     font-weight: bold;
+    //     display: inline-block;
 
-        padding: 0.3em;
-        margin: 0.2em;
+    //     padding: 0.3em;
+    //     margin: 0.2em;
 
-        background-color: var(--bg-main);
-        border: 0.2em solid var(--accent1);
-        border-radius: var(--round-radius);
+    //     background-color: var(--bg-main);
+    //     border: 0.2em solid var(--accent1);
+    //     border-radius: var(--round-radius);
 
-        transition: all 0.3s ease-in-out;
-    }     
+    //     transition: all 0.3s ease-in-out;
+    // }     
 
-    .navbar a:hover{
-        background-color: var(--accent1);
-        color: var(--text-white);
-    }
+    // .navbar a:hover{
+    //     background-color: var(--accent1);
+    //     color: var(--text-white);
+    // }
 
-    .navbar .logo
-    {
-        font-weight: bold;
-        font-size: xx-large;
-        line-height: normal;
-    }
+    // .navbar .logo
+    // {
+    //     font-weight: bold;
+    //     font-size: xx-large;
+    //     line-height: normal;
+    // }
 
     .header-grid{
         display: grid;
