--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,50 +1,48 @@
-<!-- Wrapper -->
-<!-- <div id="wrapper"> -->
+<!-- Header -->
+<header id="header">
 
-    <!-- Header -->
-    <header id="header">
+    <div class="header-grid">
+        <div></div>
 
-        <div class="header-grid">
-            <div></div>
+        <div class="title-box">
+            <div id="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <div class="menu__icon">
+                        <span></span>
+                    </div>
 
-            <div class="title-box">
-                <div id="hamburger-menu">
-                    <input id="menu__toggle" type="checkbox" />
-                    <label class="menu__btn" for="menu__toggle">
-                        <div class="menu__icon">
-                            <span></span>
-                        </div>
-
-                        <ul class="menu__box">
-                            <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
-                            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
-                            {% for page in navlist %}
-                            <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-                            {% endfor %}
-                            <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fas fa-adjust"></i></button></li>
-                        </ul>
-                        <div class="menu__overlay"></div>
-                    </label>   
-                </div>
-
-                <h1>{{page.title}}</h1>
+                    <ul class="menu__box">
+                        <li><a class="menu__item" href="{{ site.baseurl }}/">Home</a></li>
+                        {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
+                        {% for page in navlist %}
+                        <li><a class="menu__item" href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+                        {% endfor %}
+                        <li class="menu__item" style="cursor: pointer;" onclick="mySwitchTheme()"><button class="theme-btn"><i class="fas fa-adjust"></i></button></li>
+                    </ul>
+                    <div class="menu__overlay"></div>
+                </label>   
             </div>
 
-            <div></div>
+            <h1>{{page.title}}</h1>
         </div>
 
-        <!-- <div class="navbar">
-            
-            <a href="{{ site.baseurl }}/" class="logo">{{ site.title }}</a>
+        <div></div>
+    </div>
 
-            <div></div>
-            
-            <div>
-                {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
-                {% for page in navlist %}
-                    <a href="{{ page.url | absolute_url }}">{{ page.title }}</a>
-                {% endfor %}
-                <button class="theme-btn" onclick="mySwitchTheme()"><i class="fas fa-adjust"></i></button>
-            </div>
-        </div> -->
-    </header>
+    <!-- TODO: remake navbar -->
+    <!-- <div class="navbar">
+        
+        <a href="{{ site.baseurl }}/" class="logo">{{ site.title }}</a>
+
+        <div></div>
+        
+        <div>
+            {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
+            {% for page in navlist %}
+                <a href="{{ page.url | absolute_url }}">{{ page.title }}</a>
+            {% endfor %}
+            <button class="theme-btn" onclick="mySwitchTheme()"><i class="fas fa-adjust"></i></button>
+        </div>
+    </div> -->
+</header>
