Improve containers and split captions

--- a/_includes/preview-list.html
+++ b/_includes/preview-list.html
@@ -56,7 +56,7 @@
         previewGrid.appendChild(link);
 
         var previewContainer = document.createElement('div');
-        previewContainer.classList.add('container', 'video__container', 'preview', 'responsive', 'round');
+        previewContainer.classList.add('container', 'video__container', 'preview', 'container__wide', 'round');
         link.appendChild(previewContainer);
         
         if(post.videoUrl != "")
