--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -1,6 +1,7 @@
 @import 'libs/text';
 @import 'libs/grids';
 @import 'libs/containers';
+@import 'libs/captions';
 @import 'libs/images';
 @import 'libs/videos';
 @import 'libs/collapsible';
